# GDint

./: CMakeLists.txt  CleanCharacters.hpp  FileHandler.cpp  FileHandler.hpp  Lexer.interp  Lexer.tokens  OutputPreprocessing_Code.txt  PreprocessCode.cpp  README.md  TokensTable.h  example.gdi
Compiler/: Compiler.cpp  paths.h
Documents/: Bitacora.md  Lexer.md  Parser.md  Semantics.md
Documents/Registers/: 11Nov2024.md  13Nov2024.md  15Nov2024.md  17Nov2024.md
Documents/Test/: LexerValid.md  Output.md  ParserValid.md  SemanticsApiParam.md  SemanticsAssignType.md  SemanticsExpTypes.md  SemanticsIfTypes.md  SemanticsOpTypes.md  SemanticsRunTime.md  SemanticsValid.md
Input/: Config.txt  LL1Grammar.txt  TestGrammar  example.gdi  grammar.txt
Lexer/: Automata.cpp  Automata.h  DoLexicalAnalysis.h  Lexer.cpp  Lexer.h  LexerMain.cpp  StatesInfo.h  StatesToType.h  TokenStruct.h  TransitionTable.cpp  TransitionTable.h
NewLexer/: Lexer.cpp  Lexer.g4  Lexer.h
NewLexer/Cpp/: CMakeLists.txt
NewLexer/Cpp/cmake/: FindANTLR.cmake
Output/: Preprocessing_Code.txt
Parser/: DoSyntaxAnalysis.h  Grammar.cpp  Grammar.h  GrammarInterpreter.cpp  GrammarInterpreter.h  Preparser.cpp  Preparser.h  SyntaxNode.h  SyntaxToken.h
Preprocessing/: BlankCharacters.hpp  CleanCharacters.cpp  CleanCharacters.hpp  DoPreproccesing.h
Semantics/: ASTNodes.h  DoSemanticAnalysis.h  ParseTreeConverter.h  SemanticToken.h
Tools/: FileHandler.cpp  FileHandler.hpp  TokenTypes.h  paths.h  util.cpp  util.h
resources/: DFA.csv  analizador_Lexico.jff  my_file.txt  transitionReader.py
